--- a/index.html
+++ b/index.html
@@ -9,6 +9,124 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>Test</h1>
+    <!-- /////////////////////////////// -->
+    <!-- ********** HERO SECTION *********-->
+    <!-- /////////////////////////////// -->
+
+    <section class="hero">
+      <div class="hero__title-section">
+        <h4>charge <span style="color: #a52a2a">+</span> Zone</h4>
+        <h2>
+          The <span style="color: #a52a2a">Operating System </span>For EV
+          Charging Networks
+        </h2>
+        <button class="btn">Request Demo</button>
+      </div>
+    </section>
+
+    <!-- /////////////////////////////// -->
+    <!-- ********** FEATURE SECTION *********-->
+    <!-- /////////////////////////////// -->
+
+    <section class="feature">
+      <div class="feature__container">
+        <img src="images/icons/connect.png" alt="feature-icon-1" />
+
+        <h6>connect</h6>
+
+        <p>
+          Easy to connect and manage any OCPP compliant charger to the network
+        </p>
+      </div>
+
+      <div class="feature__container">
+        <img src="images/icons/asset.png" alt="feature-icon-1" />
+
+        <h6>Asset Management</h6>
+
+        <p>
+          Asset health monitoring and analytics with real time status, live
+          tracking, faults and alarms management
+        </p>
+      </div>
+
+      <div class="feature__container">
+        <img src="images/icons/remo.png" alt="feature-icon-1" />
+
+        <h6>Remote Management</h6>
+
+        <p>
+          Remote Start/Stop, Reboot your charge spot, Manage charger's
+          operations and firmware updates.
+        </p>
+      </div>
+
+      <div class="feature__container">
+        <img
+          src="images/icons//mitech-landing-theme-feature-04-68x68.png"
+          alt="feature-icon-1"
+        />
+
+        <h6>Flexible Price Engine</h6>
+
+        <p>
+          Set Station wise flexible price for fast charging or battery swapping
+          as per your business requirement.
+        </p>
+      </div>
+    </section>
+
+    <!-- /////////////////////////////// -->
+    <!-- ********** PRODUCT SECTION *********-->
+    <!-- /////////////////////////////// -->
+
+    <section class="product">
+      <div class="product__container">
+        <div class="product__heading--container">
+          <h6>Our Software</h6>
+          <h3>
+            We Provide Management System For
+            <span style="color: #a52a2a">Fast Charging</span> And
+            <span style="color: #a52a2a">Battery Swapping</span>
+          </h3>
+        </div>
+
+        <div class="product__container--nested">
+          <img
+            src="images/banner/bss800x404.png"
+            alt="Battery swapping management system"
+          />
+
+          <p>
+            Charge+Cloud offers seamless and consistent Management system to
+            <strong>monitor and operate</strong> battery swapping networks
+            seamlessly and consistently.
+          </p>
+
+          <img
+            src="images/banner/cms800x404.png"
+            alt="Charging Management System (CMS)"
+          />
+
+          <p>
+            Charging Management System (CMS) -
+            <strong>One central platform </strong>
+            to manage an individual or group of charge spot/s.
+          </p>
+
+          <img
+            class="grad"
+            src="images/banner/csms800x404.png"
+            alt="Charging Station Monitoring System (CSMS)"
+          />
+
+          <p>
+            Charging Station Monitoring System (CSMS) is
+            <strong>specially designed</strong> for monitoring charging station
+            and battery swapping stations.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
