--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
     <!-- /////////////////////////////// -->
 
     <section class="hero">
+      <header class="header">
+        <img class="header__logo" src="images/logo/Group 10.svg" alt="logo" />
+
+        <nav class="main-nav">
+          <ul class="main-nav__list">
+            <li><a class="main-nav__link" href="#">Home</a></li>
+            <li><a class="main-nav__link" href="#">About Us</a></li>
+            <li><a class="main-nav__link" href="#">Software</a></li>
+            <li><a class="main-nav__link" href="#">Mobile App</a></li>
+            <li><a class="main-nav__link" href="#">Partners</a></li>
+            <li><a class="main-nav__link" href="#">Contact Us</a></li>
+          </ul>
+        </nav>
+      </header>
+
       <div class="hero__title-section">
         <h4>charge <span style="color: #a52a2a">+</span> Zone</h4>
         <h2>
@@ -115,7 +130,6 @@
           </p>
 
           <img
-            class="grad"
             src="images/banner/csms800x404.png"
             alt="Charging Station Monitoring System (CSMS)"
           />
