--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- /////////////////////////////// -->
 
     <section class="hero">
-      <header class="header">
+      <header class="header grid grid--nav-cols">
         <img class="header__logo" src="images/logo/Group 10.svg" alt="logo" />
 
         <nav class="main-nav">
@@ -43,7 +43,7 @@
     <!-- ********** FEATURE SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <section class="feature">
+    <section class="feature grid grid--4-cols">
       <div class="feature__container">
         <img src="images/icons/connect.png" alt="feature-icon-1" />
 
@@ -55,7 +55,7 @@
       </div>
 
       <div class="feature__container">
-        <img src="images/icons/asset.png" alt="feature-icon-1" />
+        <img src="images/icons/remo.png" alt="feature-icon-1" />
 
         <h6>Asset Management</h6>
 
@@ -66,7 +66,7 @@
       </div>
 
       <div class="feature__container">
-        <img src="images/icons/remo.png" alt="feature-icon-1" />
+        <img src="images/icons/asset.png" alt="feature-icon-1" />
 
         <h6>Remote Management</h6>
 
@@ -106,7 +106,7 @@
           </h3>
         </div>
 
-        <div class="product__container--nested">
+        <div class="product__container--nested grid grid--3-cols">
           <img
             src="images/banner/bss800x404.png"
             alt="Battery swapping management system"
