--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="stylesheet" href="css/style.css" />
     <title>Portfolio</title>
   </head>
@@ -30,9 +29,9 @@
       </header>
 
       <div class="hero__title-section">
-        <h4>charge <span style="color: #a52a2a">+</span> Zone</h4>
+        <h4>charge <span style="color: #be210b">+</span> Zone</h4>
         <h2>
-          The <span style="color: #a52a2a">Operating System </span>For EV
+          The <span style="color: #be210b">Operating System </span>For EV
           Charging Networks
         </h2>
         <button class="btn">Request Demo</button>
@@ -101,8 +100,8 @@
           <h6>Our Software</h6>
           <h3>
             We Provide Management System For
-            <span style="color: #a52a2a">Fast Charging</span> And
-            <span style="color: #a52a2a">Battery Swapping</span>
+            <span style="color: #be210b">Fast Charging</span> And
+            <span style="color: #be210b">Battery Swapping</span>
           </h3>
         </div>
 
@@ -140,6 +139,51 @@
             and battery swapping stations.
           </p>
         </div>
+      </div>
+    </section>
+
+    <section class="partner">
+      <div class="partner__container">
+        <div class="bg-img">
+          <div class="bg-img__text">
+            <h5>
+              The<span style="color: #d2a98e">
+                Powerful,Secure and Flexible</span
+              >
+              EV Charging Software
+            </h5>
+          </div>
+        </div>
+
+        <div class="partner__logo">
+          <div class="partner__logo--container">
+            <img src="images/partner/shuttl-9.png" alt="" />
+
+            <img src="images/partner/e-1.png" alt="" />
+
+            <img src="images/partner/b-1.png" alt="" />
+
+            <img src="images/partner/smartE-0.png" alt="" />
+
+            <img src="images/partner/a-1.png" alt="" />
+
+            <img src="images/partner/shuttl-9.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact">
+      <div class="contact__bg-img">
+        <div class="contact__title">
+          <p class="line"></p>
+          <h4>
+            Obtain Further Information By
+            <span style="color: #be210b">Contacting</span> Our Experienced
+            Tech-Team.
+          </h4>
+        </div>
+        <div class="contact__info"></div>
       </div>
     </section>
   </body>
