--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- ********** FEATURE SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <section class="feature grid grid--4-cols">
+    <!-- <section class="feature grid grid--4-cols">
       <div class="feature__container">
         <img src="images/icons/connect.png" alt="feature-icon-1" />
 
@@ -96,7 +96,7 @@
           </p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- /////////////////////////////// -->
     <!-- ********** PRODUCT SECTION *********-->
