--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@
             >Charging station Monitioring System</a
           ></li>
 
+          <p>hi mitech-landing-theme-feature-04-68x68</p>
+
           <li class="footer__list--items">
           <a href="#" class="hover-on-link">Mobile App</a>
         </li>
