--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css" />
+
     <title>Portfolio</title>
   </head>
   <body>
@@ -202,86 +210,109 @@
 
     <footer class="footer">
       <div class="footer__container">
-        <div class="footer__container--logo">
-          <img src="images/logo/Group 10.svg" alt="company logo" />
+        <div class="footer__flex-1">
+          <div class="footer__container--logo">
+            <img src="images/logo/Group 10.svg" alt="company logo" />
+          </div>
+
+          <h6 class="title">TecSo ChargeZone(P)Ltd.</h6>
+
+          <ul class="footer__list">
+            <li class="footer__list--items">
+              401, BENISON Complex,Opp. Shiv Mahal Palace,
+            </li>
+            <li class="footer__list--items">
+              Old Padra Road, Vadodara, Gujarat - 390007, INDIA
+            </li>
+            <li class="footer__list--items">
+              <a href="mailto:info@chargecloud.net">info@chargecloud.net</a>
+            </li>
+            <li class="footer__list--items">
+              <a href="tel:123344556" class="text-black">+91 72270 25948</a>
+            </li>
+          </ul>
         </div>
 
-        <h6 class="title">TecSo ChargeZone(P)Ltd.</h6>
+        <div class="footer__link">
+          <div class="product-container">
+            <h6>Products</h6>
 
-        <ul class="footer__list">
-          <li class="footer__list--items">
-            401, BENISON Complex,Opp. Shiv Mahal Palace,
-          </li>
-          <li class="footer__list--items">
-            Old Padra Road, Vadodara, Gujarat - 390007, INDIA
-          </li>
-          <li class="footer__list--items">
-            <a href="mailto:info@chargecloud.net">info@chargecloud.net</a>
-          </li>
-          <li class="footer__list--items">
-            <a href="tel:123344556" class="text-black">+91 72270 25948</a>
-          </li>
-        </ul>
+            <ul class="footer__list col-1">
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link"
+                  >Battery Swapping Management System</a
+                >
+              </li>
+
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">Charging Management System</a>
+              </li>
+
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link"
+                  >Charging station Monitioring System</a
+                >
+              </li>
+
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">Mobile App</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="quick-container">
+            <h6>Quick Links</h6>
+
+            <ul class="footer__list col-2">
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">Home</a>
+              </li>
+
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">Charge+Zone</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="support-container">
+            <h6>Support</h6>
+
+            <ul class="footer__list col-3">
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">About Us</a>
+              </li>
+
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
 
-      <div class="footer__link">
-        <h6>Products</h6>
+      <div class="footer__bottom-wrapper">
+        <div class="copyright">
+          © 2021 Charge+Cloud. All Rights Reserved | Design And Develop by :
+          <a class="copyright__link" href="https://mbhtechnologies.com/">
+            MBH Technologies Pvt. Ltd.</a
+          >
+        </div>
 
-        <ul class="footer__list col-1">
-          <li class="footer__list--items">
-            <a href="#" class="hover-on-link"
-              >Battery Swapping Management System</a
-            >
-          </li>
-
-          <li class="footer__list--items">
-            <a href="#" class="hover-on-link">Charging Management System</a>
-          </li>
-
-          <li class="footer__list--items">
-            <a href="#" class="hover-on-link"
-              >Charging station Monitioring System</a
-            >
-          </li>
-
-          <li class="footer__list--items">
-            <a href="#" class="hover-on-link">Mobile App</a>
-          </li>
-        </ul>
-
-        <h6>Quick Links</h6>
-
-        <ul class="footer__list col-2">
-          <li class="footer__list--items">
-            <a href="#" class="hover-on-link">Home</a>
-          </li>
-
-          <li class="footer__list--items">
-            <a href="#" class="hover-on-link">Charge+Zone</a>
-          </li>
-        </ul>
-
-        <h6>Support</h6>
-
-        <ul class="footer__list col-3">
-          <li class="footer__list--items">
-            <a href="#" class="hover-on-link">About Us</a>
-          </li>
-
-          <li class="footer__list--items">
-            <a href="#" class="hover-on-link">Contact Us</a>
-          </li>
-        </ul>
+        <div class="footer__icons">
+          <a
+            href="https://www.facebook.com/ChargeMyElectric"
+            target="_blank"
+            class="hint"
+            ><i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/company/chargecloud/"
+            target="_blank"
+            class="hint"
+            ><i class="fa-brands fa-linkedin"></i>
+          </a>
+        </div>
       </div>
-
-      <div class="copyright">
-        © 2021 Charge+Cloud. All Rights Reserved | Design And Develop by :
-        <a class="copyright__link" href="https://mbhtechnologies.com/">
-          MBH Technologies Pvt. Ltd.</a
-        >
-      </div>
-
-      <div class="footer__icons"></div>
     </footer>
   </body>
 </html>
