--- a/index.html
+++ b/index.html
@@ -298,21 +298,24 @@
           >
         </div>
 
-        <div class="footer__icons">
-          <a
-            href="https://www.facebook.com/ChargeMyElectric"
-            target="_blank"
-            class="hint"
-            ><i class="fa-brands fa-facebook-f"></i>
-          </a>
-          <a
+        <div class="footer__icons-wrapper">
+          <div class="icon facebook">
+            <div class="tooltip">Facebook</div>
+            <a href="https://www.facebook.com/ChargeMyElectric" target="_blank"
+            ><span><i class="fa-brands fa-facebook-f"></i></span>
+            </a>  
+          </div>
+          
+          <div class="icon linkedin">
+            <div class="tooltip">linkedin</div>
+            <a
             href="https://www.linkedin.com/company/chargecloud/"
             target="_blank"
-            class="hint"
-            ><i class="fa-brands fa-linkedin"></i>
-          </a>
+            ><span><i class="fa-brands fa-linkedin"></i></span>
+            </a>
+          </div>
         </div>
-      </div>
+
     </footer>
   </body>
 </html>
