--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
 
     <footer class="footer">
       <div class="footer__container">
-        <div class="footer__flex-1">
+        <div class="footer__container-flex">
           <div class="footer__container--logo">
             <img src="images/logo/Group 10.svg" alt="company logo" />
           </div>
 
-          <h6 class="title">TecSo ChargeZone(P)Ltd.</h6>
+          <h6 class="footer__title">TecSo ChargeZone(P)Ltd.</h6>
 
           <ul class="footer__list">
             <li class="footer__list--items">
@@ -225,16 +225,16 @@
               Old Padra Road, Vadodara, Gujarat - 390007, INDIA
             </li>
             <li class="footer__list--items">
-              <a href="mailto:info@chargecloud.net">info@chargecloud.net</a>
+              <a href="mailto:info@chargecloud.net" class="hover-on-link">info@chargecloud.net</a>
             </li>
             <li class="footer__list--items">
-              <a href="tel:123344556" class="text-black">+91 72270 25948</a>
+              <a href="tel:123344556" class="hover-on-link" style="color:#333333">+91 72270 25948</a>
             </li>
           </ul>
         </div>
 
         <div class="footer__link">
-          <div class="product-container">
+          <div class="footer__container-1">
             <h6>Products</h6>
 
             <ul class="footer__list col-1">
@@ -260,7 +260,7 @@
             </ul>
           </div>
 
-          <div class="quick-container">
+          <div class="footer__container-2">
             <h6>Quick Links</h6>
 
             <ul class="footer__list col-2">
@@ -274,7 +274,7 @@
             </ul>
           </div>
 
-          <div class="support-container">
+          <div class="footer__container-3">
             <h6>Support</h6>
 
             <ul class="footer__list col-3">
