--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -11,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Portfolio</title>
@@ -187,28 +189,45 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
+
+    <!-- /////////////////////////////// -->
+    <!-- ********** CONTACT SECTION *********-->
+    <!-- /////////////////////////////// -->
 
     <section class="contact">
       <div class="contact__bg-img">
-        <div class="contact__title">
-          <div class="line">
+        <div class="contact__wrapper">
+          <div class="contact__title">
             <h4>
               Obtain Further Information By
               <span style="color: #be210b">Contacting</span> Our Experienced
               Tech-Team.
             </h4>
           </div>
+
+          <div class="contact__info">
+            <div class="contact__info-icons">
+              <i class="fa fa-thin fa-phone-flip"></i>
+            </div>
+            <h6>reach out now!</h6>
+            <a class="contact__num" href="tel:9172 2702 5944"
+              >+ 9172 2702 5944</a
+            >
+
+            <div class="contact__info-btn">
+              <a href="#">Request Demo</a>
+            </div>
+          </div>
         </div>
-        <div class="contact__info"></div>
       </div>
-    </section> -->
+    </section>
 
     <!-- /////////////////////////////// -->
     <!-- ********** FOOTER SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer__container">
         <div class="footer__container-flex">
           <div class="footer__container--logo">
@@ -316,6 +335,6 @@
           </div>
         </div>
 
-    </footer>
+    </footer> -->
   </body>
 </html>
