updated contact-info sec

--- a/index.html
+++ b/index.html
@@ -207,16 +207,18 @@
           </div>
 
           <div class="contact__info">
-            <div class="contact__info-icons">
-              <i class="fa fa-thin fa-phone-flip"></i>
-            </div>
-            <h6>reach out now!</h6>
-            <a class="contact__num" href="tel:9172 2702 5944"
-              >+ 9172 2702 5944</a
-            >
+            <div class="contact__info-container">
+              <div class="contact__info-icons">
+                <i class="fa fa-thin fa-phone-flip"></i>
+              </div>
+              <h6>reach out now!</h6>
+              <a class="contact__num" href="tel:9172 2702 5944"
+                >+ 9172 2702 5944</a
+              >
 
-            <div class="contact__info-btn">
-              <a href="#">Request Demo</a>
+              <div class="contact__info-btn">
+                <a href="#">Request Demo</a>
+              </div>
             </div>
           </div>
         </div>
