--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <!-- ********** CONTACT SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <section class="contact">
+    <!-- <section class="contact">
       <div class="contact__bg-img">
         <div class="contact__wrapper">
           <div class="contact__title">
@@ -223,13 +223,13 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- /////////////////////////////// -->
     <!-- ********** FOOTER SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <!-- <footer class="footer">
+     <!-- <footer class="footer">
       <div class="footer__container">
         <div class="footer__container-flex">
           <div class="footer__container--logo">
@@ -335,8 +335,8 @@
             ><span><i class="fa-brands fa-linkedin"></i></span>
             </a>
           </div>
-        </div>
+        </div> -->
 
-    </footer> -->
+    </footer>
   </body>
 </html>
