--- a/index.html
+++ b/index.html
@@ -160,20 +160,24 @@
       </div>
     </section> -->
 
-    <!-- <section class="partner">
-      <div class="partner__container">
-        <div class="bg-img">
-          <div class="bg-img__text">
-            <h5>
-              The<span style="color: #d2a98e">
-                Powerful,Secure and Flexible</span
-              >
-              EV Charging Software
-            </h5>
-          </div>
-        </div>
+    <!-- /////////////////////////////// -->
+    <!-- ********** BRAND LOGO SECTION *********-->
+    <!-- /////////////////////////////// -->
 
-        <div class="partner__logo">
+    <!-- <div class="bg-img">
+      <div class="bg-img__text">
+        <h5>
+          The<span style="color: #d2a98e">
+            Powerful,Secure and Flexible</span
+          >
+          EV Charging Software
+        </h5>
+      </div>
+    </div> -->
+
+
+    <section class="partner">
+      <div class="partner__container">
           <div class="partner__logo--container">
             <img src="images/partner/shuttl-9.png" alt="" />
 
@@ -187,9 +191,8 @@
 
             <img src="images/partner/shuttl-9.png" alt="" />
           </div>
-        </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- /////////////////////////////// -->
     <!-- ********** CONTACT SECTION *********-->
