--- a/about.html
+++ b/about.html
@@ -4,7 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="css/style.css" />
+
     <title>About us</title>
   </head>
-  <body></body>
+  <body>
+    <!-- /////////////////////////////////// -->
+    <!--////////// ABOUT SECTION ////////////-->
+    <!-- /////////////////////////////////// -->
+
+    <section class="about">
+      <div class="about__container">
+        <h4>Charge <span style="color: #be210b">+</span> Zone</h4>
+
+        <h3>
+          Charge+Cloud provides <br />SAAS as end-to-end<span
+            style="color: #be210b"
+            ><i> Solution For Managing</i></span
+          >
+          and
+          <span style="color: #be210b"
+            ><i>Operating EV Charging Networks</i></span
+          >
+        </h3>
+      </div>
+
+      <div class="about__cards">
+        <div class="card-1">
+          <h5>Charge+Zone Mobile App</h5>
+          <div class="text">
+            Simple and easy Mobile App for B2B and B2C Applications
+          </div>
+          <a href="#">Know More</a>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
