--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="main-nav">
           <ul class="main-nav__list">
             <li><a class="main-nav__link" href="#">Home</a></li>
-            <li><a class="main-nav__link" href="#">About Us</a></li>
+            <li><a class="main-nav__link" href="/about.html">About Us</a></li>
             <li><a class="main-nav__link" href="#">Software</a></li>
             <li><a class="main-nav__link" href="#">Mobile App</a></li>
             <li><a class="main-nav__link" href="#">Partners</a></li>
