--- a/about.html
+++ b/about.html
@@ -11,10 +11,11 @@
   </head>
   <body>
     <!-- /////////////////////////////////// -->
-    <!--////////// ABOUT SECTION ////////////-->
+    <!--/// ABOUT HEADING AND CARDS SECTION //-->
     <!-- /////////////////////////////////// -->
 
-    <section class="about">
+    <!-- <section class="about">
+      <div class="circle"></div>
       <div class="about__container">
         <h4>Charge <span style="color: #be210b">+</span> Zone</h4>
 
@@ -30,15 +31,180 @@
         </h3>
       </div>
 
-      <div class="about__cards">
-        <div class="card-1">
-          <h5>Charge+Zone Mobile App</h5>
-          <div class="text">
-            Simple and easy Mobile App for B2B and B2C Applications
+      <div class="about__card">
+        <div class="about__card-container">
+          <div class="card-1">
+            <h5>Charge+Zone Mobile App</h5>
+            <div class="text">
+              Simple and easy Mobile App for B2B and B2C Applications
+            </div>
+            <a href="#">Know More</a>
           </div>
-          <a href="#">Know More</a>
+        </div>
+
+        <div class="about__card-container">
+          <div class="card-2">
+            <h5>Battery Swapping Station</h5>
+            <div class="text">
+              Charge+Cloud offers Management System to mointor and operate
+              battery swapping Networks..
+            </div>
+            <a href="#">Know More</a>
+          </div>
+        </div>
+
+        <div class="about__card-container">
+          <div class="card-3">
+            <h5>Fast Charging Station</h5>
+            <div class="text">
+              One central platform to manage OCPP 1.6 compliant fast chargers.
+            </div>
+            <a href="#">Know More</a>
+          </div>
         </div>
       </div>
-    </section>
+    </section> -->
+
+    <!-- /////////////////////////////////// -->
+    <!--/// ABOUT INFO SECTION //-->
+    <!-- /////////////////////////////////// -->
+
+    <!-- <section class="about__info">
+      <div class="about__info-title">
+        <h3>
+          Learn More About <span style="color: #be210b"> Charge</span>
+          <span style="color: #000080">+Cloud</span>
+        </h3>
+      </div>
+
+      <div class="about__info-text">
+        <h5>
+          Charge+Cloud is an integrated solution for two major verticals of EV
+          charging industry.
+          <span style="color: #be210b"
+            >Charge+Cloud provides SAAS as end-to-end solution for managing and
+            operating</span
+          >
+          fast charging stations as well as battery swapping stations. It is
+          developed and managed by Charge+Zone ! Charge+Cloud is designed to
+          reduce busywork, so you can focus on the things that matters-
+          establishing EV infrastructure and providing charging services.
+        </h5>
+      </div>
+    </section> -->
+
+    <!-- /////////////////////////////// -->
+    <!-- ********** FOOTER SECTION *********-->
+    <!-- /////////////////////////////// -->
+
+    <!-- <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__container-flex">
+          <div class="footer__container--logo">
+            <img src="images/logo/Group 10.svg" alt="company logo" />
+          </div>
+
+          <h6 class="footer__title">TecSo ChargeZone(P)Ltd.</h6>
+
+          <ul class="footer__list">
+            <li class="footer__list--items">
+              401, BENISON Complex,Opp. Shiv Mahal Palace,
+            </li>
+            <li class="footer__list--items">
+              Old Padra Road, Vadodara, Gujarat - 390007, INDIA
+            </li>
+            <li class="footer__list--items">
+              <a href="mailto:info@chargecloud.net" class="hover-on-link">info@chargecloud.net</a>
+            </li>
+            <li class="footer__list--items">
+              <a href="tel:123344556" class="hover-on-link" style="color:#333333">+91 72270 25948</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__link">
+          <div class="footer__container-1">
+            <h6>Products</h6>
+
+            <ul class="footer__list col-1">
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link"
+                  >Battery Swapping Management System</a
+                >
+              </li>
+
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">Charging Management System</a>
+              </li>
+
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link"
+                  >Charging station Monitioring System</a
+                >
+              </li>
+
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">Mobile App</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__container-2">
+            <h6>Quick Links</h6>
+
+            <ul class="footer__list col-2">
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">Home</a>
+              </li>
+
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">Charge+Zone</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__container-3">
+            <h6>Support</h6>
+
+            <ul class="footer__list col-3">
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">About Us</a>
+              </li>
+
+              <li class="footer__list--items">
+                <a href="#" class="hover-on-link">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer__bottom-wrapper">
+        <div class="copyright">
+          © 2021 Charge+Cloud. All Rights Reserved | Design And Develop by :
+          <a class="copyright__link" href="https://mbhtechnologies.com/">
+            MBH Technologies Pvt. Ltd.</a
+          >
+        </div>
+
+        <div class="footer__icons-wrapper">
+          <div class="icon facebook">
+            <div class="tooltip">Facebook</div>
+            <a href="https://www.facebook.com/ChargeMyElectric" target="_blank"
+            ><span><i class="fa-brands fa-facebook-f"></i></span>
+            </a>  
+          </div>
+          
+          <div class="icon linkedin">
+            <div class="tooltip">linkedin</div>
+            <a
+            href="https://www.linkedin.com/company/chargecloud/"
+            target="_blank"
+            ><span><i class="fa-brands fa-linkedin"></i></span>
+            </a>
+          </div>
+        </div> 
+
+    </footer> -->
   </body>
 </html>
