--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
       </div>
     </section> -->
 
-      <!-- /////////////////////////////// -->
-      <!-- ********** MOBILE APP SECTION *********-->
-      <!-- /////////////////////////////// -->
+    <!-- /////////////////////////////// -->
+    <!-- ********** MOBILE APP SECTION *********-->
+    <!-- /////////////////////////////// -->
 
     <!-- <section class="mobile">
       <div class="mobile__container">
@@ -240,11 +240,10 @@
       </div>
     </section> -->
 
-      <!-- /////////////////////////////// -->
-      <!-- ********** IMAGE WITH HEADING SECTION *********-->
-      <!-- /////////////////////////////// -->
+    <!-- /////////////////////////////// -->
+    <!-- ********** IMAGE WITH HEADING SECTION *********-->
+    <!-- /////////////////////////////// -->
 
-    
     <!-- <div class="bg-img">
       <div class="bg-img__text">
         <h5>
@@ -256,11 +255,11 @@
         </div>
       </div> -->
 
-      <!-- /////////////////////////////// -->
-      <!-- ********** BRAND LOGO SECTION *********-->
-      <!-- /////////////////////////////// -->
+    <!-- /////////////////////////////// -->
+    <!-- ********** BRAND LOGO SECTION *********-->
+    <!-- /////////////////////////////// -->
 
-<!-- 
+    <!-- 
     <section class="partner">
 
       <div class="partner__container">
@@ -366,7 +365,7 @@
     <!-- ********** FOOTER SECTION *********-->
     <!-- /////////////////////////////// -->
 
-     <!-- <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer__container">
         <div class="footer__container-flex">
           <div class="footer__container--logo">
@@ -472,8 +471,8 @@
             ><span><i class="fa-brands fa-linkedin"></i></span>
             </a>
           </div>
-        </div> -->
+        </div> 
 
-    </footer>
+    </footer> -->
   </body>
 </html>
