--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <ul class="main-nav__list">
             <li><a class="main-nav__link" href="#">Home</a></li>
             <li><a class="main-nav__link" href="/about.html">About Us</a></li>
-            <li><a class="main-nav__link" href="#">Software</a></li>
+            <li><a class="main-nav__link" href="/cms.html">Software</a></li>
             <li><a class="main-nav__link" href="#">Mobile App</a></li>
             <li><a class="main-nav__link" href="#">Partners</a></li>
             <li><a class="main-nav__link" href="#">Contact Us</a></li>
