--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <!--/// ABOUT HEADING AND CARDS SECTION //-->
     <!-- /////////////////////////////////// -->
 
-    <!-- <section class="about">
+    <section class="about">
       <div class="circle"></div>
       <div class="about__container">
         <h4>Charge <span style="color: #be210b">+</span> Zone</h4>
@@ -63,13 +63,13 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- /////////////////////////////////// -->
     <!--/// ABOUT INFO SECTION //-->
     <!-- /////////////////////////////////// -->
 
-    <!-- <section class="about__info">
+    <section class="about__info">
       <div class="about__info-title">
         <h3>
           Learn More About <span style="color: #be210b"> Charge</span>
@@ -91,13 +91,13 @@
           establishing EV infrastructure and providing charging services.
         </h5>
       </div>
-    </section> -->
+    </section>
 
     <!-- /////////////////////////////// -->
     <!-- ********** FOOTER SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer__container">
         <div class="footer__container-flex">
           <div class="footer__container--logo">
@@ -205,6 +205,6 @@
           </div>
         </div> 
 
-    </footer> -->
+    </footer>
   </body>
 </html>
