--- a/cms.html
+++ b/cms.html
@@ -24,8 +24,25 @@
           </div>
         </div>
 
-        <div class="cms__hero-container-image">
-          <img src="images/features/12.png" alt="" />
+        <div class="flex-container">
+          <div class="cms__hero-container-image">
+            <img src="images/features/12.png" alt="" />
+          </div>
+
+          <div class="cms__hero-heading-container-1">
+            <h4>Station Management</h4>
+
+            <p style="color: #be210b">How It works</p>
+
+            <div class="text">
+              One central platform to manage an individual or group of Charge
+              Spot/s. Provides core functionality of Charging Station
+              management, User management, Station management, Business
+              intelligence, Dashboard, MIS Reports. For various business stack
+              holders, access rights can be configured with respect to
+              administration functions & database information.
+            </div>
+          </div>
         </div>
       </div>
     </section>
