--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- ********** HERO SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <!-- <section class="hero">
+    <section class="hero">
       <header class="header grid grid--nav-cols">
         <img class="header__logo" src="images/logo/Group 10.svg" alt="logo" />
 
@@ -46,13 +46,13 @@
         </h2>
         <button class="btn">Request Demo</button>
       </div>
-    </section> -->
+    </section>
 
     <!-- /////////////////////////////// -->
     <!-- ********** FEATURE SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <!-- <section class="feature grid grid--4-cols">
+    <section class="feature grid grid--4-cols">
       <div class="feature__container">
         <img src="images/icons/connect.png" alt="feature-icon-1" />
 
@@ -106,13 +106,13 @@
           </p>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- /////////////////////////////// -->
     <!-- ********** PRODUCT SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <!-- <section class="product">
+    <section class="product">
       <div class="product__container">
         <div class="product__heading">
           <h6>Our Software</h6>
@@ -166,13 +166,13 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- /////////////////////////////// -->
     <!-- ********** MOBILE APP SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <!-- <section class="mobile">
+    <section class="mobile">
       <div class="mobile__container">
         <div class="mobile__text-container">
 
@@ -184,7 +184,7 @@
         </div>
 
         <div class="timeline-area">
-        <div class="timeline-area__container">
+        <!-- <div class="timeline-area__container"> -->
           <div class="timeline-area__charge-spots">
           <div class="contain-left">
             <h6 class="timeline-area__heading">Charge Spots</h6>
@@ -233,18 +233,18 @@
               Easily navigate the charging station and charge your EV.                                        
             </p>
           </div>
-          </div>
+          <!-- </div> -->
         </div>
 
+       </div>
       </div>
-      </div>
-    </section> -->
+    </section>
 
     <!-- /////////////////////////////// -->
     <!-- ********** IMAGE WITH HEADING SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <!-- <div class="bg-img">
+    <div class="bg-img">
       <div class="bg-img__text">
         <h5>
           The<span style="color: #d2a98e">
@@ -259,7 +259,7 @@
     <!-- ********** BRAND LOGO SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <!-- 
+    
     <section class="partner">
 
       <div class="partner__container">
@@ -325,13 +325,13 @@
             </a>  
 
       </div>
-    </section> -->
+    </section>
 
     <!-- /////////////////////////////// -->
     <!-- ********** CONTACT SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <!-- <section class="contact">
+    <section class="contact">
       <div class="contact__bg-img">
         <div class="contact__wrapper">
           <div class="contact__title">
@@ -359,13 +359,13 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section> 
 
     <!-- /////////////////////////////// -->
     <!-- ********** FOOTER SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <!-- <footer class="footer">
+     <footer class="footer">
       <div class="footer__container">
         <div class="footer__container-flex">
           <div class="footer__container--logo">
@@ -473,6 +473,6 @@
           </div>
         </div> 
 
-    </footer> -->
+    </footer>
   </body>
 </html>
