--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
 
         <div class="timeline-area">
-        <!-- <div class="timeline-area__container"> -->
+        <div class="timeline-area__container">
           <div class="timeline-area__charge-spots">
           <div class="contain-left">
             <h6 class="timeline-area__heading">Charge Spots</h6>
@@ -233,7 +233,7 @@
               Easily navigate the charging station and charge your EV.                                        
             </p>
           </div>
-          <!-- </div> -->
+          </div>
         </div>
 
        </div>
