--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- ********** HERO SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <section class="hero">
+    <!-- <section class="hero">
       <header class="header grid grid--nav-cols">
         <img class="header__logo" src="images/logo/Group 10.svg" alt="logo" />
 
@@ -46,7 +46,7 @@
         </h2>
         <button class="btn">Request Demo</button>
       </div>
-    </section>
+    </section> -->
 
     <!-- /////////////////////////////// -->
     <!-- ********** FEATURE SECTION *********-->
@@ -54,8 +54,9 @@
 
     <section class="feature grid grid--4-cols">
       <div class="feature__container">
+        <div class="image-box">
         <img src="images/icons/connect.png" alt="feature-icon-1" />
-
+      </div>
         <div class="feature__text">
           <h6>connect</h6>
 
@@ -66,7 +67,9 @@
       </div>
 
       <div class="feature__container">
+        <div class="image-box">
         <img src="images/icons/remo.png" alt="feature-icon-1" />
+      </div>
 
         <div class="feature__text">
           <h6>Asset Management</h6>
@@ -79,8 +82,9 @@
       </div>
 
       <div class="feature__container">
+        <div class="image-box">
         <img src="images/icons/asset.png" alt="feature-icon-1" />
-
+      </div>
         <div class="feature__text">
           <h6>Remote Management</h6>
 
@@ -92,10 +96,12 @@
       </div>
 
       <div class="feature__container">
+        <div class="image-box">
         <img
           src="images/icons//mitech-landing-theme-feature-04-68x68.png"
           alt="feature-icon-1"
         />
+      </div>
 
         <div class="feature__text">
           <h6>Flexible Price Engine</h6>
@@ -112,7 +118,7 @@
     <!-- ********** PRODUCT SECTION *********-->
     <!-- /////////////////////////////// -->
 
-    <section class="product">
+    <!-- <section class="product">
       <div class="product__container">
         <div class="product__heading">
           <h6>Our Software</h6>
@@ -166,7 +172,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- /////////////////////////////// -->
     <!-- ********** MOBILE APP SECTION *********-->
@@ -253,14 +259,14 @@
             EV Charging Software
           </h5>
         </div>
-      </div> -->
+      </div> 
 
     <!-- /////////////////////////////// -->
     <!-- ********** BRAND LOGO SECTION *********-->
     <!-- /////////////////////////////// -->
 
     
-    <section class="partner">
+    <!-- <section class="partner">
 
       <div class="partner__container">
           <div class="partner__logo--container">
@@ -325,7 +331,7 @@
             </a>  
 
       </div>
-    </section>
+    </section> -->
 
     <!-- /////////////////////////////// -->
     <!-- ********** CONTACT SECTION *********-->
