--- a/cms.html
+++ b/cms.html
@@ -46,5 +46,11 @@
         </div>
       </div>
     </section>
+
+    <section class="cms__features">
+      <div class="cms__feature-container">
+        <h3>One Stop, Everything You Want In CMS</h3>
+      </div>
+    </section>
   </body>
 </html>
